--- a/wildlife-form/package.json
+++ b/wildlife-form/package.json
@@ -2,16 +2,19 @@
   "name": "wildlife-form",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {
-    "@eonasdan/tempus-dominus": "^6.9.10",
-    "bootstrap": "^5.3.3",
-    "popper.js": "^1.16.1"
-  }
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm dist/*",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "pharingWell",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@eonasdan/tempus-dominus": "^6.9.10",
+    "bootstrap": "^5.3.3",
+    "onchange": "^7.1.0",
+    "popper.js": "^1.16.1",
+    "webpack-cli": "^5.1.4"
+  }
 }
