--- a/wildlife-form/package.json
+++ b/wildlife-form/package.json
@@ -13,7 +13,9 @@
     "@eonasdan/tempus-dominus": "^6.9.10",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "css-loader": "^7.1.2",
     "onchange": "^7.1.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   },
