--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
   "author": "pharingWell",
   "license": "MIT",
   "description": "",
-  "devDependencies": {
+  "dependencies": {
     "@eonasdan/tempus-dominus": "^6.9.10",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "onchange": "^7.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "ajax": "^0.0.4",
-    "jquery": "^3.7.1"
   }
 }
