--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup node
         uses: actions/setup-node@v4.0.3
+      - run: npm run clean --if-present
       - run: npm ci
       - run: chmod +x zoho && ./zoho
       - run: npm run build --if-present
