--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "wildlife-form",
   "version": "1.0.0",
   "scripts": {
+    "start": "webpack serve",
     "clean": "rm dist/*",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "build:html": "posthtml -c posthtml.json",
+    "watch:html": "onchange \"src\" -- npm run build:html"
   },
   "keywords": [],
   "author": "pharingWell",
@@ -15,9 +18,13 @@
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
     "onchange": "^7.1.0",
+    "posthtml": "^0.16.6",
+    "posthtml-cli": "^0.10.0",
+    "posthtml-modules": "^0.9.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "ajax": "^0.0.4",
