Squashed commit of the following:
commit 165734f611aea5d6e61bde3e29b23cf48f61235a
Author: Jeremy Fischer <jefische86@gmail.com>
Date:   Tue Sep 3 18:54:33 2024 -0400

    form question updates

commit 44d09116115c2d520bd2565b2813d36ad7a64e91
Author: Jeremy Fischer <jefische86@gmail.com>
Date:   Wed Aug 28 12:06:59 2024 -0400

    minor text edits

commit 4b015f6f3f88627d461208bfeb093e30f71ae4c2
Author: Jeremy Fischer <jefische86@gmail.com>
Date:   Wed Aug 28 11:59:11 2024 -0400

    form validation and input updates

commit a16541875b64989f46e26c1fd927a87c8818a0ff
Author: Jeremy Fischer <jefische86@gmail.com>
Date:   Tue Aug 27 19:35:26 2024 -0400

    form and mapping updates

commit 7d4487fa81c5129a5bedb51272eebfe4ac6ef2d2
Author: Jeremy Fischer <jefische86@gmail.com>
Date:   Tue Aug 20 20:28:39 2024 -0400

    initial stubout of a few form questions

--- a/package.json
+++ b/package.json
@@ -2,24 +2,34 @@
   "name": "wildlife-form",
   "version": "1.0.0",
   "scripts": {
+    "start": "webpack serve",
     "clean": "rm dist/*",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "build:html": "posthtml -c posthtml.json",
+    "watch:html": "onchange \"src\" -- npm run build:html"
   },
   "keywords": [],
   "author": "pharingWell",
   "license": "MIT",
   "description": "",
-  "dependencies": {
+  "devDependencies": {
     "@eonasdan/tempus-dominus": "^6.9.10",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "onchange": "^7.1.0",
+    "posthtml": "^0.16.6",
+    "posthtml-cli": "^0.10.0",
+    "posthtml-modules": "^0.9.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
-  "devDependencies": {
-    "dotenv-webpack": "^8.1.0"
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "ajax": "^0.0.4",
+    "jquery": "^3.7.1"
   }
 }
