--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
 	"author": "pharingWell",
 	"license": "MIT",
 	"description": "",
-	"devDependencies": {
+	"dependencies": {
 		"@eonasdan/tempus-dominus": "^6.9.10",
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
 		"css-loader": "^7.1.2",
 		"html-webpack-plugin": "^5.6.0",
+		"leaflet": "^1.9.4",
 		"onchange": "^7.1.0",
 		"posthtml": "^0.16.6",
 		"posthtml-cli": "^0.10.0",
@@ -26,10 +27,5 @@
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^5.0.4"
-	},
-	"dependencies": {
-		"ajax": "^0.0.4",
-		"jquery": "^3.7.1",
-		"leaflet": "^1.9.4"
 	}
 }
