--- a/package.json
+++ b/package.json
@@ -4,25 +4,20 @@
 	"scripts": {
 		"start": "webpack serve",
 		"clean": "rm dist/*",
-		"build": "webpack --mode=production",
-		"build:html": "posthtml -c posthtml.json",
-		"watch:html": "onchange \"src\" -- npm run build:html"
+		"build": "webpack --mode=production"
 	},
 	"keywords": [],
 	"author": "pharingWell",
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
-		"@eonasdan/tempus-dominus": "^6.9.10",
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
 		"css-loader": "^7.1.2",
-		"html-webpack-plugin": "^5.6.0",
+		"jquery": "^3.7.1",
 		"leaflet": "^1.9.4",
+		"leaflet.fullscreen": "^3.0.2",
 		"onchange": "^7.1.0",
-		"posthtml": "^0.16.6",
-		"posthtml-cli": "^0.10.0",
-		"posthtml-modules": "^0.9.1",
 		"style-loader": "^4.0.0",
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4",
